Create section animation

--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,8 +1,8 @@
-<section class="advantages animate__pulse">
+<section class="advantages">
 <div class="container">
       <h2 class="title visually-hidden">Advantages</h2>
-      <ul class="advantage-list list">
-         <li class="advantage-item">
+      <ul class="advantage-list list _anim-items _anim-no-hide">
+         <li class="advantage-item ">
             <h3 class="advantage-title">
                Adapted author's
                UPE program
