--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -14,7 +14,7 @@
          <a class="button hero-button link _anim-items _anim-no-hide" href="#registration">i want a free lesson</ф>
       </div>
       
-      <div class="hero-wrapper">
+      <div class="hero-wrapper _anim-items _anim-no-hide">
          <picture>
             <source srcset="
                 ./images/content/desktop/hero-img-desk.webp 1x,
