--- a/src/partials/how-we-do.html
+++ b/src/partials/how-we-do.html
@@ -2,7 +2,7 @@
     <div class="how-we-do-container container">
         <h2 class="how-we-do-title title black-title">How do we do it</h2>
         <!-- <div class="how-we-do-list-block"> -->
-            <ul class="how-we-do-list list animate__bounceInRight">
+            <ul class="how-we-do-list list _anim-items _anim-no-hide">
                 <li class="how-we-do-item">
                     <div class="how-we-do-icon-wrapper">
                         <svg class="how-we-do-icon" width="46" height="48">
