--- a/src/partials/problems.html
+++ b/src/partials/problems.html
@@ -2,24 +2,24 @@
     <div class="problems-container container">
         <h2 class="problems-title title white-title">The main problems of students<br>in English UPE, which<br> we <span
                 class="title-accent-word">help</span> to solve</h2>
-        <div class="problems-list-block">
-            <ol class="problems-list list _anim-items">
-                <li class="problems-item _anim-show">
+        <div class="problems-list-block _anim-items _anim-no-hide">
+            <ol class="problems-list list">
+                <li class="problems-item">
                     Grammar
                 </li>
-                <li class="problems-item _anim-show">
+                <li class="problems-item">
                     Inability to understand spoken English
                 </li>
-                <li class="problems-item _anim-show">
+                <li class="problems-item">
                     Stingy vocabulary for writing an essay
                 </li>
-                <li class="problems-item _anim-show">
+                <li class="problems-item">
                     Preparing alone
                 </li>
-                <li class="problems-item _anim-show">
+                <li class="problems-item">
                     Lack of a single knowledge resource
                 </li>
-                <li class="problems-item _anim-show">
+                <li class="problems-item">
                     Lack of self-organization and laziness
                 </li>
             </ol>
