--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -37,7 +37,6 @@
  }
 
 .hero-container {
-   
    @media screen and (min-width: 768px) {
       position: relative;
       display: flex;
@@ -73,19 +72,19 @@
       width: 520px;
    }
 
-   .hero-text-block {
+.hero-text-block {
    margin-bottom: 52px; 
 
    transform: translate(0px, 120%);
    opacity: 0;
-   transition: all 700ms ease 0ms;
+   transition: all 1000ms ease 0ms;
 
-   }
+}
 
-   .hero-text-block._active {
-      transform: translate(0px, 0px);
-      opacity: 1;
-   }
+.hero-text-block._active {
+   transform: translate(0px, 0px);
+   opacity: 1;
+}
    
 }
 .hero-title {
@@ -145,9 +144,9 @@
    align-items: center;
    justify-content: center;
 
-   transform: translateX(-130%);
+
    opacity: 0;
-   transition: transform 700ms ease 0ms;
+   transition: opacity 700ms ease 0ms;
 
    @media screen and (min-width: 768px) {
       margin-left: 0;
@@ -155,49 +154,20 @@
 }
 
 .hero-button._active {
-   transform: translateY(0px);
    opacity: 1;
-   transition: transform 700ms ease 400ms;
+   transition: opacity 1000ms ease 400ms;
 }
 
-
-
 .hero-background{
-   @keyframes fade-in {
-      0% {
-         opacity: 0;
-      }
+   transform: scale(0);
+   transition: transform 1000ms ease 0ms;
+}
 
-      100% {
-         opacity: 1;
-      }
-
-      // 0% {
-      //   transform: scale(1);
-      // }
-    
-      // 14% {
-      //   transform: scale(1.15);
-      // }
-    
-      // 28% {
-      //   transform: scale(1);
-      // }
-    
-      // 42% {
-      //   transform: scale(1.15);
-      // }
-    
-      // 70% {
-      //   transform: scale(1);
-      // }
-    }
+.hero-wrapper._active .hero-background {
+   transform: scale(1);
 }
     
 .hero-background {
-      animation-name: fade-in;
-      animation-duration: 1000ms;
-      animation-timing-function: ease-in-out;
     
    @media screen and (max-width: 767px) {
       width: 208px;
