--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,26 +1,27 @@
-<footer class="footer-title">
-    <div class="footer-main">
-        <div class="contact container">
-        <a class="desk-footerlogo">HELL<span class="deslogosvg">
-            <svg class="desk-svghead"  width="22" height="30">
-                <use href="../src/images/icons/sprite.svg#icon-fire"></use>
-            </svg></span>ENN
-        <p class="head-footer">HELLISH<span class="headernav-down"> ENGLISH</span></p>
+<div class="footer-container container">
+    <div class="contact">
+    <a class="desk-footerlogo">HELL
+        <svg class="logo-icon"  width="22" height="30">
+            <use href="../src/images/icons/sprite.svg#icon-fire"></use>
+        </svg>ENN
+    <p class="logo-text">HELLISH<span class="logo-text-accent"> ENGLISH</span></p>
+</a>
+<div class="footer-contact">
+    <a class="contact-number" href="#">
+        <svg class="logo-icon"  width="30" height="29">
+            <use href="../src/images/icons/sprite.svg#icon-phone"></use>
+        </svg>
+    +38 (000) 000 00 00
     </a>
-    <div class="footer-contact">
-        <a class="contact-number" href="#">
-            <svg class="desk-svghead"  width="30" height="29">
-                <use href="../src/images/icons/sprite.svg#icon-phone"></use>
-            </svg>
-        +38 (000) 000 00 00
-        </a>
-        <object class="instagram" type="image/svg+xml" data="../src/images/icons/instagram.svg">
-            <img class="image-instagram" alt="instagram" src="../src/images/icons/instagram.svg" width="40" height="40">
-        </object>
-    </div>
-    </div>
-    <div class="fotar-end">
-        <p class="avtor">@ All rights reserved, 2019</p>
-    </div>
+    <object class="instagram" type="image/svg+xml" data="../src/images/icons/instagram.svg">
+        <img class="instagram-icon" alt="instagram" src="../src/images/icons/instagram.svg" width="40" height="40">
+    </object>
+</div>
+</div>
+</div>
+
+<footer class="footer">
+    <div class="copyright-wrapper">
+        <p class="copyright container">@ All rights reserved, 2019</p>
     </div>
 </footer>
