--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,39 +1,39 @@
 <header class="header">
     <div class="header-wrappe container">
-        <nav class="headernav">
-            <a class="desklogo">HELL<span class="deslogosvg">
-                <svg class="desk-svghead"  width="22" height="30">
+        <nav class="header-nav">
+            <a class="logo">HELL
+                <svg class="logo-icon"  width="22" height="30">
                     <use href="../src/images/icons/sprite.svg#icon-fire"></use>
-                </svg></span>ENN
-            <p class="head-footer">HELLISH<span class="headernav-down"> ENGLISH</span></p>
+                </svg>ENN
+            <p class="logo-text">HELLISH<span class="logo-text-accent"> ENGLISH</span></p>
         </a>
-            <ul class="headernav-title hero">
-                <li class="head-link"><a class="head-main headermenu-current" href="#">STUDING PROGRAM</a></li>
-                <li class="head-link"><a class="head-main" href="#">ABOUT</a></li>
-                <li class="head-link"><a class="head-main" href="#">TRAINING OPTIONS</a></li>
-                <li class="head-link"><a class="head-main" href="#">CONTACTS</a></li>
+            <ul class="header-nav-list hero">
+                <li class="header-nav-item"><a class="header-nav-link current" href="#">studing program</a></li>
+                <li class="header-nav-item"><a class="header-nav-link" href="#">about</a></li>
+                <li class="header-nav-item"><a class="header-nav-link" href="#">training options</a></li>
+                <li class="header-nav-item"><a class="header-nav-link" href="#">contacts</a></li>
             </ul>
         </nav>
-        <button type="button" class="order-button">CONSULTATION BY PHONE</button>
+        <button type="button" class="order-button">consultation by phone</button>
 
         <button type="button" class="mobile-button" data-menu-button>
-            <svg class="iconhead" width="21" height="12">
+            <svg class="iconhead" width="21" height="50">
                 <use href="../src/images/icons/menu.svg#icon-menu"></use>
             </svg>
         </button>
     </div>
 
-    <div class="mobile-header is-open" data-menu>
-        <div class="mobile-headermenu container">
-            <a class="mobile-logo">HELL<span class="mobile-logosvg">
-                <svg class="mobile-svghead"  width="22" height="30">
+    <div class="mobile-header" data-menu>
+        <div class="mobile-menu container">
+            <a class="mobile-logo">HELL
+                <svg class="logo-icon"  width="22" height="30">
                     <use href="../src/images/icons/sprite.svg#icon-fire"></use>
-                </svg></span>ENN
-            <p class="head-footer">HELLISH<span class="mobiledown">ENGLISH</span></p>
+                </svg> ENN
+            <p class="logo-text">HELLISH<span class="mobiledown">ENGLISH</span></p>
         </a>
 
             <button type="button" class="close-button" data-menu-close>
-                <svg class="iconheadclose" width="15" height="15">
+                <svg class="close-icon" width="15" height="15">
                     <use href="../src/images/icons/sprite.svg#icon-close"></use>
                 </svg>
             </button> 
