--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,7 +1,7 @@
 
 <section class="about">
     <div class="container">
-        <h2 class="about-title">Teacher</h2>
+        <h2 class="about-title title">Teacher</h2>
         <div class="about-tab">
         <picture class="about-picture">
             <source srcset="./images/content/desktop/about-desk.webp 1x, ./images/content/desktop/about-desk@2x.webp 2x"
@@ -20,8 +20,8 @@
         </picture>
         
         <div class="about-tumb">
-        <h3 class="about-name">Elena Moreva</h3>
-        <ul class="about-list">     
+        <h3 class="about-name title">Elena Moreva</h3>
+        <ul class="about-list list">
             <li class="about-item">
                 6 yeards of experience in preparing students for UPE
             </li> 
