--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -1,9 +1,8 @@
 .about {
-  padding-top:20px;
-  padding-bottom:25px;
+  padding-top:40px;
+  
 }
 .about-list {
-  
   margin-bottom: 10px;
   font-size: 14px;
   line-height: 1.21;
@@ -25,17 +24,11 @@
   text-align: left;
 }
 .about-title {
-  font-size: 20px;
   color: $primary-black-color;
-  font-weight: 800;
-  line-height: 1.3;
-  letter-spacing: 0.03em;
   margin-bottom: 20px;
 }
 .about-name {
   display: block;
-  font-size: 20px;
-  font-weight: 800;
   line-height: 1.2;
   padding-top: 10px;
   padding-bottom: 10px;
@@ -94,11 +87,9 @@
 @media screen and (min-width: 768px) {
   
   .about {
-    padding-top:65px;
-    padding-bottom:65px;
+    padding-top:50px;
   }
   .about-title {
-    font-size: 26px;
     margin-bottom: 30px;
   }
   .about-list {
@@ -106,6 +97,7 @@
     line-height: 1.25;
     margin-top: 20px;
     margin-bottom: 35px;
+    margin-left: 40px;
   }
 
   .about-item {
@@ -116,9 +108,7 @@
     justify-content: space-between;
    
   }
-  .about-picture {
-    margin-right: 40px;
-  }
+  
   .about-name {
     padding-top: 0px;
     width: 401px;
@@ -134,7 +124,6 @@
 }
 @media screen and (min-width: 1366px) {
   .about-title {
-    font-size: 46px;
     margin-bottom: 50px;
   }
   .about-name {
@@ -150,13 +139,15 @@
   .text-descr {
     font-size: 18px;
     line-height: 1.55;
+    &:last-child {
+    margin-bottom: 20px;}
   }
 
   .about-link {
     font-size: 18px;
     line-height: 1.55;
     font-style: normal;
-    margin-top: 20px;
+    
   }
 
   .about-tab {
