--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -1,1 +1,159 @@
+.about {
+  padding-top: 40px;
+}
+.about-list {
+  margin-bottom: 10px;
+  font-size: 14px;
+  line-height: 1.21;
+  font-weight: 600;
+  letter-spacing: 0.06em;
+  color: $primary-black-color;
+  &::after {
+    content: '';
+    display: block;
+    background-color: $accent-color;
+    height: 2px;
+    width: 18px;
+  }
+}
+.text-descr {
+  color: $primary-text-color;
+  font-size: 12px;
+  line-height: 1.67;
+  text-align: left;
+}
+.about-title {
+  color: $primary-black-color;
+  margin-bottom: 20px;
+}
+.about-name {
+  display: block;
+  line-height: 1.2;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  color: $primary-black-color;
+  border-bottom: 1px solid $primary-text-color;
+  margin-bottom: 20px;
+  width: 280px;
+}
 
+.about-link {
+  color: $accent-color;
+  font-size: 12px;
+  line-height: 1.67;
+  font-style: normal;
+}
+
+.about-picture {
+  margin-bottom: 20px;
+}
+
+.about-item {
+  position: relative;
+  padding-bottom: 25px;
+  text-align: left;
+  display: flex;
+
+  &::before {
+    position: absolute;
+    content: '';
+    display: block;
+    background-image: url('../images/icons/checked.svg');
+
+    width: 17px;
+    height: 14px;
+    top: 1px;
+    left: -25px;
+
+    background-position: center;
+    background-size: 100%;
+    background-repeat: no-repeat;
+  }
+}
+.about-check {
+  margin-right: 10px;
+}
+
+.about-tumb {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+@media screen and (min-width: 768px) {
+  .about {
+    padding-top: 50px;
+  }
+  .about-title {
+    margin-bottom: 30px;
+  }
+  .about-list {
+    font-size: 12px;
+    line-height: 1.25;
+    margin-top: 20px;
+    margin-bottom: 35px;
+    margin-left: 40px;
+  }
+
+  .about-item {
+    padding-bottom: 30px;
+  }
+  .about-tab {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .about-name {
+    padding-top: 0px;
+    width: 401px;
+  }
+  .text-descr {
+    font-size: 10px;
+    line-height: 2;
+  }
+
+  .about-tumb {
+    width: 402px;
+  }
+}
+@media screen and (min-width: 1366px) {
+  .about-title {
+    margin-bottom: 50px;
+  }
+  .about-name {
+    font-size: 30px;
+    margin-bottom: 30px;
+    padding-bottom: 15px;
+    width: 640px;
+  }
+  .about-item {
+    font-size: 16px;
+    line-height: 1.55;
+  }
+  .text-descr {
+    font-size: 18px;
+    line-height: 1.55;
+    &:last-child {
+      margin-bottom: 20px;
+    }
+  }
+
+  .about-link {
+    font-size: 18px;
+    line-height: 1.55;
+    font-style: normal;
+  }
+
+  .about-tab {
+    justify-content: center;
+    align-self: star;
+  }
+  .about-tumb {
+    width: 642px;
+  }
+
+  .about-picture {
+    margin-bottom: 0px;
+    margin-right: 30px;
+  }
+}
