--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,39 +1,39 @@
 <div class="backdrop" data-modal>
-  <div class="modal__order-service">
-    <button class="modal__close-btn" type="button" data-modal-close>
-      <svg class="modal__close-icon">
+  <div class="modal-order-service">
+    <button class="modal-close-btn" type="button" data-modal-close>
+      <svg class="modal-close-icon">
         <use href="./images/icons/sprite.svg#icon-close-modal"></use>
       </svg>
     </button>
-    <p class="modal__appeal">We will contact you soon</p>
-    <form action="#" class="modal__form">
-      <label class="modal__form-field">
+    <p class="modal-appeal">We will contact you soon</p>
+    <form action="#" class="modal-form">
+      <label class="modal-form-field">
         Name
-        <span class="modal__form-wrapper">
-          <input class="modal__form-input" type="text" name="user-name" required />
-          <svg class="modal__form-icon">
+        <span class="modal-form-wrapper">
+          <input class="modal-form-input" type="text" name="user-name" required />
+          <svg class="modal-form-icon">
             <use href="./images/icons/sprite.svg#icon-person-modal"></use>
           </svg>
         </span>
       </label>
-      <label class="modal__form-field">
+      <label class="modal-form-field">
         Phone
-        <span class="modal__form-wrapper">
-          <input class="modal__form-input" type="tel" name="user-phone" required />
-          <svg class="modal__form-icon">
+        <span class="modal-form-wrapper">
+          <input class="modal-form-input" type="tel" name="user-phone" required />
+          <svg class="modal-form-icon">
             <use href="./images/icons/sprite.svg#icon-phone-modal"></use>
           </svg>
         </span>
       </label>
-      <label class="modal__form-field">
+      <label class="modal-form-field">
         Comment
         <textarea
           name="user-message"
-          class="modal__form-text"
+          class="modal-form-text"
           placeholder="enter your message"
         ></textarea>
       </label>
-      <button class="modal__form-submit-btn" type="submit">Send</button>
+      <button class="modal-form-submit-btn" type="submit">Send</button>
     </form>
   </div>
 </div>
