--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -1,4 +1,4 @@
-.modal__order-service {
+.modal-order-service {
   position: relative;
   padding: 40px;
   background: rgba(17, 21, 24, 0.6);
@@ -8,7 +8,7 @@
   overflow-y: auto;
   top: 12%;
 }
-.modal__close-btn {
+.modal-close-btn {
   position: absolute;
   display: flex;
   justify-content: center;
@@ -22,37 +22,37 @@
   background-color: rgba(0, 0, 0, 0);
   cursor: pointer;
 }
-.modal__close-icon {
+.modal-close-icon {
   fill: #fff;
   width: 30px;
   height: 30px;
   transition: $modal-time $modal-form;
 
-  .modal__close-btn:focus &,
-  .modal__close-btn:hover & {
+  .modal-close-btn:focus &,
+  .modal-close-btn:hover & {
     fill: $accent-color;
   }
 }
 @media screen and (min-width: 480px) {
-  .modal__order-service {
+  .modal-order-service {
     left: 50%;
     transform: translateX(-50%);
     width: 450px;
   }
 }
 @media screen and (min-width: 1024px) {
-  .modal__order-service {
+  .modal-order-service {
     top: 50%;
     transform: translate(-50%, -50%);
   }
 }
 @media screen and (min-width: 1200px) {
-  .modal__order-service {
+  .modal-order-service {
     width: 528px;
   }
 }
 //-----------------------------------
-.modal__appeal {
+.modal-appeal {
   font-weight: bold;
   font-size: 20px;
   line-height: 1.5;
@@ -61,11 +61,11 @@
   margin-bottom: 12px;
 }
 /*---------form-------------------*/
-.modal__form {
+.modal-form {
   display: flex;
   flex-direction: column;
 }
-.modal__form-field {
+.modal-form-field {
   font-size: 12px;
   line-height: 1.16;
   letter-spacing: 0.01em;
@@ -73,12 +73,12 @@
     margin-bottom: 5px;
   }
 }
-.modal__form-wrapper {
+.modal-form-wrapper {
   margin-top: 4px;
   position: relative;
   display: block;
 }
-.modal__form-input {
+.modal-form-input {
   width: 100%;
   border: 1px solid rgba(33, 33, 33, 0.2);
   box-sizing: border-box;
@@ -91,7 +91,7 @@
     outline: none;
   }
 }
-.modal__form-icon {
+.modal-form-icon {
   position: absolute;
   top: 50%;
   left: 12px;
@@ -100,11 +100,11 @@
   width: 18px;
   height: 18px;
   transition: fill $modal-time $modal-form;
-  .modal__form-input:focus + & {
+  .modal-form-input:focus + & {
     fill: $accent-color;
   }
 }
-.modal__form-text {
+.modal-form-text {
   margin-top: 4px;
   width: 100%;
   height: 120px;
@@ -129,7 +129,7 @@
     fill: $accent-color;
   }
 }
-.modal__form-submit-btn {
+.modal-form-submit-btn {
   margin-left: auto;
   margin-right: auto;
   margin-top: 30px;
@@ -151,7 +151,7 @@
   }
 }
 @media screen and (min-width: 1200px) {
-  .modal__appeal {
+  .modal-appeal {
     line-height: 1.15;
   }
 }
