--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -27,14 +27,14 @@
   margin-bottom: 20px;
 }
 .about-name {
-  display: block;
+  display: flex;
+  align-items: center;
   line-height: 1.2;
   padding-top: 10px;
   padding-bottom: 10px;
   color: $primary-black-color;
   border-bottom: 1px solid $primary-text-color;
   margin-bottom: 20px;
-  width: 280px;
 }
 
 .about-link {
@@ -88,11 +88,13 @@
     margin-bottom: 30px;
   }
   .about-list {
+    display: flex;
+    align-items: center;
     font-size: 12px;
     line-height: 1.25;
     margin-top: 20px;
     margin-bottom: 35px;
-    margin-left: 40px;
+    margin-left: 50px;
   }
 
   .about-item {
@@ -105,7 +107,6 @@
 
   .about-name {
     padding-top: 0px;
-    width: 401px;
   }
   .text-descr {
     font-size: 10px;
@@ -124,7 +125,6 @@
     font-size: 30px;
     margin-bottom: 30px;
     padding-bottom: 15px;
-    width: 640px;
   }
   .about-item {
     font-size: 16px;
