--- a/src/sass/layout/_about.scss
+++ b/src/sass/layout/_about.scss
@@ -29,6 +29,7 @@
 .about-name {
   display: flex;
   align-items: center;
+
   line-height: 1.2;
   padding-top: 10px;
   padding-bottom: 10px;
@@ -51,7 +52,7 @@
 .about-item {
   position: relative;
   padding-bottom: 25px;
-  text-align: left;
+
   display: flex;
 
   &::before {
@@ -89,7 +90,7 @@
   }
   .about-list {
     display: flex;
-    align-items: center;
+    flex-direction: column;
     font-size: 12px;
     line-height: 1.25;
     margin-top: 20px;
