--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,5 @@
 <header class="header">
-    <div class="header-wrappe container">
+    <div class="header-container container">
         <nav class="header-nav">
             <a class="logo">HELL
                 <svg class="logo-icon"  width="22" height="30">
@@ -7,7 +7,7 @@
                 </svg>ENN
             <p class="logo-text">HELLISH<span class="logo-text-accent"> ENGLISH</span></p>
         </a>
-            <ul class="header-nav-list hero">
+            <ul class="header-nav-list list">
                 <li class="header-nav-item"><a class="header-nav-link current" href="#">studing program</a></li>
                 <li class="header-nav-item"><a class="header-nav-link" href="#">about</a></li>
                 <li class="header-nav-item"><a class="header-nav-link" href="#">training options</a></li>
@@ -38,7 +38,7 @@
                 </svg>
             </button> 
 
-            <ul class="mobilehero hero">
+            <ul class="mobile-list list">
                 <li class="mobile-item"><a class="mobile-link  mobilemenu-current" href="#">Studying program</a></li>
                 <li class="mobile-item"><a class="mobile-link" href="#">About</a></li>
                 <li class="mobile-item"><a class="mobile-link" href="#">Training options</a></li>
