--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -30,11 +30,10 @@
 }
 
 
-.logo-icon{
-    margin-right: 10px;
-}
+
 
 .copyright-wrapper{
+    text-align: center;
     padding: 22px 0;
     background-color: black;
 }
@@ -45,7 +44,7 @@
 
 }
 
-.avtor{
+.copyright{
     font-family: Montserrat;
     font-style: normal;
     font-weight: 500;
@@ -65,9 +64,7 @@
     margin: 0;
 
 }
-.logo-icon{
-    margin-right: 15px;
-}
+
     
 .contact-number{
     font-weight: 600;
@@ -104,7 +101,7 @@
         line-height: 1.23;
 }
 
-.fotar-end{
+.copyright-wrapper{
     padding: 40px 0;
 }
 
@@ -118,3 +115,6 @@ padding: 52px 0;
 }
         
     }
+
+
+    
