--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,55 +1,64 @@
 <header class="header">
-    <div class="header-wrappe container">
-        <nav class="header-nav">
-            <a class="logo">HELL
-                <svg class="logo-icon"  width="22" height="30">
-                    <use href="../src/images/icons/sprite.svg#icon-fire"></use>
-                </svg>ENN
-            <p class="logo-text">HELLISH<span class="logo-text-accent"> ENGLISH</span></p>
-        </a>
-            <ul class="header-nav-list hero">
-                <li class="header-nav-item"><a class="header-nav-link current" href="#">studing program</a></li>
-                <li class="header-nav-item"><a class="header-nav-link" href="#">about</a></li>
-                <li class="header-nav-item"><a class="header-nav-link" href="#">training options</a></li>
-                <li class="header-nav-item"><a class="header-nav-link" href="#">contacts</a></li>
-            </ul>
-        </nav>
-        <button type="button" class="order-button">consultation by phone</button>
-
-        <button type="button" class="mobile-button" data-menu-button>
-            <svg class="iconhead" width="21" height="50">
-                <use href="../src/images/icons/menu.svg#icon-menu"></use>
-            </svg>
-        </button>
+  <div class="header-wrappe container">
+    <nav class="header-nav">
+      <a class="header-logo">
+        <span class="header-logo-text">
+          Hell
+          <svg class="header-logo-icon">
+            <use href="../src/images/icons/sprite.svg#icon-fire"></use>
+          </svg>
+          EN
+        </span>
+        <span class="logo-text-accent"> HELLISH </span> ENGLISH
+      </a>
+      <ul class="header-nav-list list">
+        <li class="header-nav-item">
+          <a class="header-nav-link current" href="#">studing program</a>
+        </li>
+        <li class="header-nav-item"><a class="header-nav-link" href="#">about</a></li>
+        <li class="header-nav-item"><a class="header-nav-link" href="#">training options</a></li>
+        <li class="header-nav-item"><a class="header-nav-link" href="#">contacts</a></li>
+      </ul>
+    </nav>
+    <div class="header-btn-container">
+      <button type="button" class="header-order-button" data-modal-open>
+        consultation by phone
+      </button>
+      <button type="button" class="header-mobile-button" data-menu-button>
+        <svg class="header-burger-icon">
+          <use href="../src/images/icons/sprite.svg#header-burger"></use>
+        </svg>
+      </button>
     </div>
+  </div>
 
-    <div class="mobile-header" data-menu>
-        <div class="mobile-menu container">
-            <a class="mobile-logo">HELL
-                <svg class="logo-icon"  width="22" height="30">
-                    <use href="../src/images/icons/sprite.svg#icon-fire"></use>
-                </svg> ENN
-            <p class="logo-text">HELLISH<span class="mobiledown">ENGLISH</span></p>
-        </a>
+  <!-- <div class="mobile-header" data-menu>
+    <div class="mobile-menu container">
+      <a class="mobile-logo">
+        HELL
+        <svg class="header-logo-icon" width="22" height="30">
+          <use href="../src/images/icons/sprite.svg#icon-fire"></use>
+        </svg>
+        EN
+        <p class="logo-text">HELLISH<span class="mobiledown">ENGLISH</span></p>
+      </a>
 
-            <button type="button" class="close-button" data-menu-close>
-                <svg class="close-icon" width="15" height="15">
-                    <use href="../src/images/icons/sprite.svg#icon-close"></use>
-                </svg>
-            </button> 
+      <button type="button" class="close-button" data-menu-close>
+        <svg class="close-icon" width="15" height="15">
+          <use href="../src/images/icons/sprite.svg#icon-close"></use>
+        </svg>
+      </button>
 
-            <ul class="mobilehero hero">
-                <li class="mobile-item"><a class="mobile-link  mobilemenu-current" href="#">Studying program</a></li>
-                <li class="mobile-item"><a class="mobile-link" href="#">About</a></li>
-                <li class="mobile-item"><a class="mobile-link" href="#">Training options</a></li>
-                <li class="mobile-item"><a class="mobile-link" href="#">Contacts</a></li>
-            </ul>
+      <ul class="mobilehero list">
+        <li class="mobile-item">
+          <a class="mobile-link mobilemenu-current" href="#">Studying program</a>
+        </li>
+        <li class="mobile-item"><a class="mobile-link" href="#">About</a></li>
+        <li class="mobile-item"><a class="mobile-link" href="#">Training options</a></li>
+        <li class="mobile-item"><a class="mobile-link" href="#">Contacts</a></li>
+      </ul>
 
-            <button type="button" class="mobileorder-button">CONSULTATION BY PHONE</button>
-        </div>
-
+      <button type="button" class="mobileorder-button">CONSULTATION BY PHONE</button>
     </div>
-
-
-    
+  </div> -->
 </header>
