--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,178 +1,71 @@
-.header{
-    padding: 40px 0;
+.header-wrappe {
+  justify-content: space-between;
+  display: flex;
+  align-items: center;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
-
-.hero{
-    list-style: none;
+.header-logo {
+  color: $primary-black-color;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 5px;
+  line-height: 1.2;
+  letter-spacing: 0.18em;
 }
-
-.order-button{
-display: none;
+.header-logo-text {
+  font-weight: 800;
+  font-size: 14px;
+  line-height: 1.2;
+  letter-spacing: 0.04em;
+  text-align: left;
+  display: flex;
+  align-items: center;
+  text-transform: none;
 }
-
-.header-nav-list{
-    display: flex;
-    margin-left: 114px;
+.header-logo-icon {
+  margin-left: 4px;
+  margin-right: 4px;
+  width: 14px;
+  height: 19px;
 }
-
-.header-nav-list{
-    display: none;
+.logo-text-accent {
+  margin-left: 4px;
+  color: $accent-color;
 }
-
-
-.header-wrappe{
-    justify-content: space-between;
-    display: flex;
-    align-items: center;
-    margin-left: auto;
-    margin-right: auto;
+.header-nav-list,
+.header-order-button {
+  display: none;
 }
-
-.mobile-button{
-
-    background-color: transparent;
-    border: none;
+.header-mobile-button {
+  background-color: transparent;
+  border: none;
+  box-sizing: border-box;
 }
-
-.logo{
-font-family: Montserrat;
-font-style: normal;
-font-weight: 800;
-font-size: 26px;
-line-height: 1.23;
-letter-spacing: 0.04em;
-color: $primary-black-color;
-text-align: left;
-
+.header-burger-icon {
+  width: 30px;
+  height: 30px;
 }
-
-.iconhead{
-    width: 30px;
-    height: 30px;
-}
-
-.logo-text{
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 8px;
-    line-height: 0.8;    
-    letter-spacing: 0.18em;
-    text-transform: uppercase;
-    color: $accent-color;
-
-}
-
-.logo-text-accent{
+//-------------tablet------------------------
+@media screen and (min-width: 768px) {
+  .header-logo {
     color: $primary-black-color;
-}
-
-.mobile-header.is-open{
-    opacity: 1;
-    visibility: visible;
-    pointer-events: auto;
-}
-
-.mobile-header{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background-color:rgba(17, 21, 24, 0.9);;
-    overflow: auto;
-    z-index: 1000;
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    transition-duration: 250ms;
-}
-
-// Modalmenu
-.mobile-logo{
-    @extend .logo;
-    color: white;
-    margin-bottom: 50px;
-}
-
-
-.mobile-menu{
-    display: flex;
-    flex-direction: column;
-    padding: 38px 30px;
-    position: relative;
-    width: 100%;
-    height: 100%;
-}
-
-.close-button{
-    border: none;
-    background-color: transparent;
-    position: absolute;
-    right: 0;
-    border: none;
-    background-color: transparent;
-    padding: 0;
-    margin-right: 15px;
-    margin-top: 5px;
-}
-
-.mobile-link{
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: 800;
-    font-size: 20px;
-    line-height: 180%;
-    letter-spacing: 0.03em;
-    color: #FFFFFF;
-    text-decoration: none;
-}
-
-.mobile-link:hover,
-.mobile-link:focus{
-    color: $accent-color;
-}
-
-.mobiledown{
-    color: $primary-white-color;
-}
-
-.mobilehero{
-    margin-bottom: 50px;
-    text-align: left;
-    align-self: center;
-}
-
-
-  .mobile-link.mobilemenu-current{
-    color: $accent-color;
-
+    font-weight: 700;
+    font-size: 8px;
+    line-height: 1.25;
+    letter-spacing: 0.18em;
   }
-
-
-// =================================================
-
-@media screen and (min-width:768px) {
-
-
-.order-button{
-        display: block;
-        }
-
-
-
-.header-wrappe{
-    justify-content: space-between;
+  .header-logo-text {
+    font-size: 26px;
+    line-height: 1.23;
+  }
+  .header-order-button {
+    display: block;
+  }
+  .header-btn-container {
     display: flex;
-    align-items: center;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.order-button{
-    font-family: Montserrat;
-    font-style: normal;
+  }
+  .header-order-button {
     font-weight: bold;
     font-size: 14px;
     line-height: 1.21;
@@ -183,53 +76,40 @@ text-align: left;
     color: $accent-color;
     border: 2px solid $accent-color;
     padding: 15px 5px;
-    margin-left: auto;
-    margin-right: 40px;
-    }
-    
+  }
+  .header-mobile-button {
+    margin-left: 40px;
+  }
 }
-
-@media screen and (min-width:1366px) {
-
-    .mobile-header{
-        display: none;
-
-    }
-
-    .mobile-menu-container.is-open{
-        display: none;
-    }
-   
-    .mobile-button{
-        display: none;
-    }
-
-    
-      .header-nav-link.current{
-        color: $accent-color;
-    
-      }
-      .order-button{
-          margin-right: auto;
-      }
-
-
-    
-    .header-nav-list{
-        display: flex;
-        margin-left: 114px;
-    }
-    .header-nav-item:not(:last-child){
-        margin-right: 40px;
-    }
-    
-    .header-nav{
-        display: flex;
-        align-items: center;
-    }
-
-            
-    .header-nav-link{
+//--------------desktop---------------------
+@media screen and (min-width: 1366px) {
+  .mobile-header {
+    display: none;
+  }
+  .mobile-menu-container.is-open {
+    display: none;
+  }
+  .header-mobile-button {
+    display: none;
+  }
+  .header-nav-link.current {
+    color: $accent-color;
+  }
+  .header-order-button {
+    margin-right: auto;
+  }
+  .header-nav-list {
+    display: flex;
+    margin-left: 114px;
+  }
+  .header-nav-item:not(:last-child) {
+    margin-right: 40px;
+  }
+  .header-nav {
+    display: flex;
+    align-items: center;
+  }
+  .header-nav-link {
     text-decoration: none;
     font-family: Montserrat;
     font-style: normal;
@@ -241,16 +121,83 @@ text-align: left;
     text-align: center;
     text-transform: uppercase;
     color: $primary-text-color;
-    }
-
-    .header-nav-link:hover,
-    .header-nav-link:focus{
-        color: $accent-color;
-    }
-
-    .order-button{
-        padding: 27px 23px;
-    }
-
+  }
+  .header-nav-link:hover,
+  .header-nav-link:focus {
+    color: $accent-color;
+  }
+  .header-order-button {
+    padding: 27px 23px;
+  }
+}
+/* .mobile-header.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+.mobile-header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(17, 21, 24, 0.9);
+  overflow: auto;
+  z-index: 1000;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 250ms;
 }
 
+// Modalmenu
+.mobile-logo {
+  @extend .header-logo;
+  color: white;
+  margin-bottom: 50px;
+}
+.mobile-menu {
+  display: flex;
+  flex-direction: column;
+  padding: 38px 30px;
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+.close-button {
+  border: none;
+  background-color: transparent;
+  position: absolute;
+  right: 0;
+  border: none;
+  background-color: transparent;
+  padding: 0;
+  margin-right: 15px;
+  margin-top: 5px;
+}
+.mobile-link {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 180%;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  text-decoration: none;
+}
+.mobile-link:hover,
+.mobile-link:focus {
+  color: $accent-color;
+}
+.mobiledown {
+  color: $primary-white-color;
+}
+.mobilehero {
+  margin-bottom: 50px;
+  text-align: left;
+  align-self: center;
+}
+.mobile-link.mobilemenu-current {
+  color: $accent-color;
+} */
