mobile-modal- start

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -32,23 +32,23 @@
     </div>
   </div>
 
-  <!-- <div class="mobile-header" data-menu>
+  <div class="mobile-header" data-menu>
+    <button type="button" class="close-button" data-menu-close>
+      <svg class="close-icon" width="15" height="15">
+        <use href="../src/images/icons/sprite.svg#icon-close"></use>
+      </svg>
+    </button>
     <div class="mobile-menu container">
-      <a class="mobile-logo">
-        HELL
-        <svg class="header-logo-icon" width="22" height="30">
-          <use href="../src/images/icons/sprite.svg#icon-fire"></use>
-        </svg>
-        EN
-        <p class="logo-text">HELLISH<span class="mobiledown">ENGLISH</span></p>
+      <a class="header-logo">
+        <span class="header-logo-text">
+          Hell
+          <svg class="header-logo-icon">
+            <use href="../src/images/icons/sprite.svg#icon-fire"></use>
+          </svg>
+          EN
+        </span>
+        <span class="logo-text-accent"> HELLISH </span> ENGLISH
       </a>
-
-      <button type="button" class="close-button" data-menu-close>
-        <svg class="close-icon" width="15" height="15">
-          <use href="../src/images/icons/sprite.svg#icon-close"></use>
-        </svg>
-      </button>
-
       <ul class="mobilehero list">
         <li class="mobile-item">
           <a class="mobile-link mobilemenu-current" href="#">Studying program</a>
@@ -57,8 +57,9 @@
         <li class="mobile-item"><a class="mobile-link" href="#">Training options</a></li>
         <li class="mobile-item"><a class="mobile-link" href="#">Contacts</a></li>
       </ul>
-
-      <button type="button" class="mobileorder-button">CONSULTATION BY PHONE</button>
+      <button type="button" class="mobileorder-button" data-modal-open>
+        CONSULTATION BY PHONE
+      </button>
     </div>
-  </div> -->
+  </div>
 </header>
