--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -54,6 +54,10 @@
     font-size: 8px;
     line-height: 1.25;
     letter-spacing: 0.18em;
+    .header-logo-icon {
+      width: 22px;
+      height: 30px;
+    }
   }
   .header-logo-text {
     font-size: 26px;
@@ -83,20 +87,12 @@
 }
 //--------------desktop---------------------
 @media screen and (min-width: 1366px) {
-  .mobile-header {
-    display: none;
-  }
-  .mobile-menu-container.is-open {
-    display: none;
-  }
   .header-mobile-button {
     display: none;
   }
-  .header-nav-link.current {
-    color: $accent-color;
-  }
   .header-order-button {
-    margin-right: auto;
+    min-width: 336px;
+    min-height: 70px;
   }
   .header-nav-list {
     display: flex;
@@ -108,6 +104,7 @@
   .header-nav {
     display: flex;
     align-items: center;
+    justify-content: space-between;
   }
   .header-nav-link {
     text-decoration: none;
@@ -121,36 +118,33 @@
     text-align: center;
     text-transform: uppercase;
     color: $primary-text-color;
-  }
-  .header-nav-link:hover,
-  .header-nav-link:focus {
-    color: $accent-color;
-  }
-  .header-order-button {
-    padding: 27px 23px;
+    &:hover,
+    &:focus {
+      color: $accent-color;
+    }
   }
 }
-/* .mobile-header.is-open {
-  opacity: 1;
-  visibility: visible;
-  pointer-events: auto;
-}
+//-----------mobile menu----------------
 .mobile-header {
   position: fixed;
   top: 0;
   left: 0;
   width: 100vw;
   height: 100vh;
-  background-color: rgba(17, 21, 24, 0.9);
+  background-color: $backdrop;
   overflow: auto;
-  z-index: 1000;
+  z-index: 50;
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 250ms;
+  transition: opacity $modal-time $backdrop-transition, visibility $modal-time $backdrop-transition;
 }
-
+.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+/* 
 // Modalmenu
 .mobile-logo {
   @extend .header-logo;
