--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -49,8 +49,7 @@
                     (Berkeley),
                     The Art of Teaching (GEMS education), Powerful Tools for Teaching and Learning (University of
                     Houston). </p>
-
-                <a class="about-link" href="https://www.cambridgeenglish.org/">Cambrige English Entry Level
+                <a class="about-link" target="_blank" rel="noreferrer noopener"  aria-label="This is an external link (opens in a new tab)" href="https://www.cambridgeenglish.org/">Cambrige English Entry Level
                     Certificate</a>
             </div>
         </div>
