Change bug in footer!

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,12 +1,12 @@
 <footer class="footer">
 <div class="footer-container container">
     <div class="contact">
-        <a class="desk-footerlogo">HELL
-            <svg class="logo-icon"  width="22" height="30">
-                <use href="../src/images/icons/sprite.svg#icon-fire"></use>
-            </svg>ENN
-        <p class="logo-text">HELLISH<span class="logo-text-accent">ENGLISH</span></p>
-    </a>
+    <a class="logo">HELL
+        <svg class="logo-icon"  width="22" height="30">
+            <use href="../src/images/icons/sprite.svg#icon-fire"></use>
+        </svg>ENN
+    <p class="logo-text">HELLISH<span class="logo-text-accent"> ENGLISH</span></p>
+</a>
     
 <div class="footer-contact">
     <a class="contact-number" href="#">
