--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -16,6 +16,22 @@
     margin-right: auto;
 }
 
+.order-button{
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.21;
+    letter-spacing: .14em;
+    text-transform: uppercase;
+    background-color: #fff;
+    cursor: pointer;
+    color: #ff6b09;
+    border: 2px solid #ff6b09;
+    margin-left: auto;
+    margin-right: 40px;
+}
+
 .button {
     display: block;
     margin-left: auto;
