--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,27 +1,31 @@
-<div class="footer-container container">
-    <div class="contact">
-        <a class="desk-footerlogo">HELL
-            <svg class="logo-icon"  width="22" height="30">
-                <use href="../src/images/icons/sprite.svg#icon-fire"></use>
-            </svg>ENN
-        <p class="logo-text">HELLISH<span class="logo-text-accent"> ENGLISH</span></p>
-    </a>
-<div class="footer-contact">
-    <a class="contact-number" href="#">
-        <svg class="logo-icon"  width="30" height="29">
-            <use href="../src/images/icons/sprite.svg#icon-phone"></use>
-        </svg>
-    +38 (000) 000 00 00
-    </a>
-    <object class="instagram" type="image/svg+xml" data="../src/images/icons/instagram.svg">
-        <img class="instagram-icon" alt="instagram" src="../src/images/icons/instagram.svg" width="40" height="40">
-    </object>
-</div>
-</div>
-</div>
-
 <footer class="footer">
-    <div class="copyright-wrapper">
-        <p class="copyright container">@ All rights reserved, 2019</p>
+  <div class="contacts-section container">
+    <div class="footer-logo">
+        <a class="header-logo">
+            <span class="header-logo-text">Hell
+                <svg class="header-logo-icon">
+                    <use href="./images/icons/sprite.svg#icon-fire"></use>
+                </svg>
+            EN</span>
+            <p class="footer-logo-text">HELLISH<span class="logo-text-accent"> ENGLISH</span></p>
+        </a>
     </div>
+    <div class="footer-contacts">
+        <ul class="footer-contacts-list list">
+            <li>
+                <a class="phone-link link" href="tel:+380000000000">
+                    <svg class="phone-icon">
+                        <use href="./images/icons/sprite.svg#icon-phone"></use>
+                    </svg>
+                    +38 (000) 000 00 00</a>
+            </li>
+            <li>
+                <img class="instagram-icon" alt="instagram" src="./images/icons/instagram.svg" width="40" height="40">
+            </li>
+        </ul>   
+    </div>
+    </div>
+    <div class="copyright">
+        <p class="container copyright-text">@ All rights reserved, 2019</p>
+ </div>
 </footer>
