--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,120 +1,117 @@
-.contact{
-    text-align: center;
-    padding: 30px 0;
-
-}
-.footer-contact{
-    display:flex;
-    flex-direction: column;
-    margin-top: 20px;
+.contacts-section {
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
-.desk-footerlogo{
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: 800;
-    font-size: 26px;
-    line-height: 1.23;
-    letter-spacing: 0.04em;
-    color: $primary-black-color;
+.footer-logo {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
 }
 
-.contact-number{
-    text-decoration: none;
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 1.21;
-    letter-spacing: 0.08em;
-    color:$primary-black-color ;
-    margin-right: 15px;
+.footer-logo-text {
+  font-size: 5px;
+  line-height: 1.2;
 }
 
-
-.logo-icon{
-    margin-right: 10px;
+.copyright {
+  background-color: black;
+  text-align: start;
+  padding-top: 21px;
+  padding-bottom: 21px;
 }
 
-.copyright-wrapper{
-    padding: 22px 0;
-    background-color: black;
+.footer-contacts-list {
+  display: block;
+  text-align: center;
 }
 
-.instagram{
-    height: 100%;
-    margin-top: 31px;
-
+.phone-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 1.21;
+  margin-bottom: 30px;
+  color: $primary-black-color;
 }
 
-.avtor{
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 2;
-    display: block;
-    text-align: center;
-    color: #B9B9B9;
+.phone-icon {
+  width: 20px;
+  height: 19px;
+  margin-right: 10px;
 }
 
-@media screen and (min-width:768px){
-
-
-.instagram{
-    padding-left: 24px;
-    border-left: 1px solid #B9B9B9;
-    margin: 0;
-
+.instagram {
+  width: 40px;
+  height: 40px;
 }
-.logo-icon{
-    margin-right: 15px;
+
+.instagram-icon {
+  margin-left: auto;
+  margin-right: auto;
 }
-    
-.contact-number{
-    font-weight: 600;
+
+.copyright-text {
+  font-size: 14px;
+  line-height: 2;
+}
+
+@media screen and (min-width: 768px) {
+  .footer-contacts-list {
+    display: flex;
+    align-items: center;
+  }
+
+  .contacts-section {
+    display: flex;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .footer-logo {
+    margin-bottom: 0px;
+  }
+
+  .phone-icon {
+    width: 24px;
+    height: 23px;
+  }
+
+  .phone-link {
     font-size: 20px;
     line-height: 1.2;
-    letter-spacing: 0.08em;}
+    margin-bottom: 0px;
+    padding-right: 24px;
+    margin-right: 24px;
+    border-right: 1px solid $primary-text-color;
+  }
 
-    .contact{
-        display: flex;
-        align-items: baseline;
-        justify-content: space-between;
-        padding: 40px 0;
-    }
-    .footer-contact{
-        margin: 0;
-        flex-direction: unset;
-
-    }
-
-
-
-    .copyright{
-    display: flex;
-    align-items: center;}
-
-    
+  .footer-logo-text {
+    font-size: 8px;
+    line-height: 1.25;
+  }
 }
 
+@media screen and (min-width: 1366px) {
+  .phone-icon {
+    width: 30px;
+    height: 28px;
+    margin-right: 15px;
+  }
 
-@media screen and (min-width:1366px){
-    
-    .contact-number{
-        font-size: 30px;
-        line-height: 1.23;
-}
+  .phone-link {
+    font-size: 30px;
+    line-height: 1.23;
+  }
 
-.fotar-end{
-    padding: 40px 0;
-}
+  .contacts-section {
+    justify-content: start;
+  }
 
-.footer-contact{
-    margin-left: 225px;
+  .footer-logo {
+    margin-right: 290px;
+  }
 }
-.contact{
-justify-content: unset;
-padding: 52px 0;
-
-}
-        
-    }
