--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,13 +1,15 @@
 <footer class="footer">
   <div class="contacts-section container">
     <div class="footer-logo">
-        <a class="header-logo">
-            <span class="header-logo-text">Hell
-                <svg class="header-logo-icon">
-                    <use href="./images/icons/sprite.svg#icon-fire"></use>
-                </svg>
-            EN</span>
-            <p class="footer-logo-text">HELLISH<span class="logo-text-accent"> ENGLISH</span></p>
+    <a class="logo">
+        <span class="logo-text">
+            Hell
+            <svg class="logo-icon">
+                <use href="../src/images/icons/sprite.svg#icon-fire"></use>
+            </svg>
+            EN
+        </span>
+        <span class="logo-text-accent"> HELLISH </span> ENGLISH
         </a>
     </div>
     <div class="footer-contacts">
@@ -20,12 +22,12 @@
                     +38 (000) 000 00 00</a>
             </li>
             <li>
-                <img class="instagram-icon" alt="instagram" src="./images/icons/instagram.svg" width="40" height="40">
+                <img class="instagram-icon" alt="instagram" src="./images/icons/instagram1.svg" width="40" height="40">
             </li>
         </ul>   
     </div>
     </div>
     <div class="copyright">
         <p class="container copyright-text">@ All rights reserved, 2019</p>
- </div>
+    </div>
 </footer>
