--- a/src/partials/guarantee.html
+++ b/src/partials/guarantee.html
@@ -4,7 +4,7 @@
     <h2 class="guar-titel black-title title ">We guarantee</h2>
     
 
-<ul class="guar-list">
+<ul class="guar-list list">
     <li class="guar-item black-title ">You will pass the UPE with at least 25 points better than on the first practice test. Otherwise, we will refund your
     money. <span class="guar-text-accent">* </span></li>
     <li class="guar-item black-title "> You will learn to write essays with at least 10 points out of 14. <span class="guar-text-accent"> While 20% of the students received 0 for essays. </span></li>
