gather logo from hader and footer to one

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,15 +1,14 @@
 <footer class="footer">
   <div class="contacts-section container">
     <div class="footer-logo">
-    <a class="logo">
-        <span class="logo-text">
-            Hell
-            <svg class="logo-icon">
-                <use href="../src/images/icons/sprite.svg#icon-fire"></use>
-            </svg>
-            EN
-        </span>
-        <span class="logo-text-accent"> HELLISH </span> ENGLISH
+        <a class="logo">
+            <span class="logo-text">
+                Hell
+                <svg class="logo-icon">
+                    <use href="../src/images/icons/sprite.svg#icon-fire"></use>
+                </svg>
+                EN
+            </span> <span class="logo-text-accent"> HELLISH </span> ENGLISH
         </a>
     </div>
     <div class="footer-contacts">
@@ -22,7 +21,9 @@
                     +38 (000) 000 00 00</a>
             </li>
             <li>
+                <a href="#">
                 <img class="instagram-icon" alt="instagram" src="./images/icons/instagram1.svg" width="40" height="40">
+                </a>
             </li>
         </ul>   
     </div>
