--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,10 +1,10 @@
 <header class="header">
   <div class="header-wrappe container">
     <nav class="header-nav">
-      <a class="header-logo">
-        <span class="header-logo-text">
+      <a class="logo">
+        <span class="logo-text">
           Hell
-          <svg class="header-logo-icon">
+          <svg class="logo-icon">
             <use href="../src/images/icons/sprite.svg#icon-fire"></use>
           </svg>
           EN
@@ -34,10 +34,10 @@
 
   <div class="mobile-header container" data-menu>
     <div class="mobile-menu header-wrappe">
-      <a class="header-logo mobile-logo">
-        <span class="header-logo-text">
+      <a class="logo mobile-logo">
+        <span class="logo-text">
           Hell
-          <svg class="header-logo-icon">
+          <svg class="logo-icon">
             <use href="../src/images/icons/sprite.svg#icon-fire"></use>
           </svg>
           EN
