--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,10 +1,10 @@
 <header class="header">
-  <div class="header-wrappe container">
+  <div class="header-container container">
     <nav class="header-nav">
-      <a class="header-logo">
-        <span class="header-logo-text">
+      <a class="logo">
+        <span class="logo-text">
           Hell
-          <svg class="header-logo-icon">
+          <svg class="logo-icon">
             <use href="../src/images/icons/sprite.svg#icon-fire"></use>
           </svg>
           EN
@@ -21,7 +21,7 @@
       </ul>
     </nav>
     <div class="header-btn-container">
-      <button type="button" class="header-order-button" data-modal-open>
+      <button type="button" class="header-order-button button" data-modal-open>
         consultation by phone
       </button>
       <button type="button" class="header-mobile-button" data-menu-button>
@@ -33,11 +33,11 @@
   </div>
 
   <div class="mobile-header container" data-menu>
-    <div class="mobile-menu header-wrappe">
-      <a class="header-logo mobile-logo">
-        <span class="header-logo-text">
+    <div class="mobile-menu header-container">
+      <a class="logo mobile-logo">
+        <span class="logo-text">
           Hell
-          <svg class="header-logo-icon">
+          <svg class="logo-icon">
             <use href="../src/images/icons/sprite.svg#icon-fire"></use>
           </svg>
           EN
@@ -59,7 +59,7 @@
         <li class="mobile-item"><a class="mobile-link" href="#">Training options</a></li>
         <li class="mobile-item"><a class="mobile-link" href="#">Contacts</a></li>
       </ul>
-      <button type="button" class="mobile-order-button" data-modal-open>
+      <button type="button" class="mobile-order-button button" data-modal-open>
         CONSULTATION BY PHONE
       </button>
     </div>
