--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,38 +1,9 @@
-.header-wrappe {
+.header-container {
   justify-content: space-between;
   display: flex;
   align-items: baseline;
   padding-top: 30px;
   padding-bottom: 30px;
-}
-.header-logo {
-  color: $primary-black-color;
-  text-transform: uppercase;
-  font-weight: 700;
-  font-size: 5px;
-  line-height: 1.2;
-  letter-spacing: 0.18em;
-}
-.header-logo-text {
-  font-weight: 800;
-  font-size: 14px;
-  line-height: 1.2;
-  letter-spacing: 0.04em;
-  text-align: left;
-  display: flex;
-  align-items: center;
-  text-transform: none;
-  margin-bottom: 4px;
-}
-.header-logo-icon {
-  margin-left: 4px;
-  margin-right: 4px;
-  width: 14px;
-  height: 19px;
-}
-.logo-text-accent {
-  margin-left: 4px;
-  color: $accent-color;
 }
 .header-nav-list,
 .header-order-button {
@@ -49,21 +20,6 @@
 }
 //-------------tablet------------------------
 @media screen and (min-width: 768px) {
-  .header-logo {
-    color: $primary-black-color;
-    font-weight: 700;
-    font-size: 8px;
-    line-height: 1.25;
-    letter-spacing: 0.18em;
-    .header-logo-icon {
-      width: 22px;
-      height: 30px;
-    }
-  }
-  .header-logo-text {
-    font-size: 26px;
-    line-height: 1.23;
-  }
   .header-order-button {
     display: block;
   }
@@ -71,16 +27,10 @@
     display: flex;
   }
   .header-order-button {
-    font-weight: bold;
     font-size: 14px;
-    line-height: 1.21;
     letter-spacing: 0.14em;
-    text-transform: uppercase;
     background-color: $primary-white-color;
-    cursor: pointer;
     color: $accent-color;
-    border: 2px solid $accent-color;
-    padding: 15px 5px;
     transition: $modal-time $modal-form;
     &:focus,
     &:hover {
@@ -182,12 +132,14 @@
     fill: $accent-color;
   }
 }
-
 .mobile-list {
   display: flex;
   flex-direction: column;
   margin-top: 50px;
   margin-bottom: 50px;
+  width: fit-content;
+  margin-left: auto;
+  margin-right: auto;
 }
 .mobile-link {
   font-weight: 800;
@@ -203,18 +155,10 @@
   }
 }
 .mobile-order-button {
-  font-weight: bold;
   font-size: 14px;
-  line-height: 1.21;
   letter-spacing: 0.14em;
-  text-transform: uppercase;
   background-color: transparent;
-  cursor: pointer;
   color: $accent-color;
-  border: 2px solid $accent-color;
-  padding: 15px 5px;
-  margin-left: auto;
-  margin-right: auto;
   &:focus,
   &:hover {
     color: #fcf0e8;
@@ -225,5 +169,12 @@
 @media screen and (min-width: 768px) {
   .mobile-order-button {
     display: none;
+  }
+  .mobile-link {
+    font-size: 26px;
+  }
+  .mobile-list {
+    margin-top: 72px;
+    margin-bottom: 0px;
   }
 }
